Move ownership to magnet.me

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "magnet-test-utils",
+  "name": "@magnet.me/magnet-test-utils",
   "version": "1.0.0",
   "description": "Set of test utilities for Magnet.me front-end projects",
   "author": "",
